# pinocchio

./: .codecov.yml  .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  DEVELOPER.md  README.md  VERBOSE_OUTPUT_ENHANCEMENT.md  demo_task_planning.py  install.sh  mypy.ini  pinocchio.backup.20250714_125528.json  pinocchio.json  pyproject.toml  pytest.ini  setup.py  test_cli.py  test_config_system.py  test_debug_repair_loop.py  test_dynamic_debugger_insertion.py  test_dynamic_debugger_insertion_minimal.py  test_enhanced_task_decomposition.py  test_integration.py  test_logo_effects.py  test_multi_round_optimisation.py  test_verbose_logging.py  workflow.json
configs/: debug.json  development.json  planning_template.json  production.json  workflow_template.json
developer-notes/: agents_module_design.mdc  agents_workflow_design.mdc  development_pipeline.mdc  llm_module_design.mdc  session_module_design.mdc  workflows_module_design.mdc
docs/: CONFIGURATION_SUMMARY.md  DOCUMENTATION_INDEX.md  MODE_FEATURE_SUMMARY.md  README.md  VERBOSE_CONFIGURATION.md  agent_specific_llm_config.md  architecture.md  cli_workflow_end2end_report.md  setup.md  testing.md
examples/: prompt_usage_example.py
pinocchio/: __init__.py  __main__.py  coordinator.py  session_logger.py
prompt_storage/: simple_matmul.json
scripts/: README.md  check_chinese_chars.py  clean_all.sh  health_check.py  run_checks.py  run_checks.sh  run_cli_planning.sh  run_cli_workflow.sh  run_local_tests.sh  run_tests.sh  setup_dev.sh  switch_mode.py
tests/: conftest.py  pytest.ini  test_config.py  (+7 more)
(+202 files in other folders)
