[tool.poetry]
name = "pinocchio"
version = "0.1.0"
description = "A multi-agent system for writing, debugging, and optimizing Choreo compute kernel DSL operators"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "pinocchio"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
invoke = "^2.2.0"
pydantic = "^2.5.2"
openai = "^1.3.7"
anthropic = "^0.7.7"
python-json-logger = "^2.0.7"
rich = "^13.5.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-cov = "^4.1.0"
black = "^23.11.0"
isort = "^5.12.0"
mypy = "^1.7.1"
flake8 = "^6.1.0"
pre-commit = "^3.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py39', 'py310']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3 